kubernetes/projects/apps/opencloud/collaboration/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collaboration
  namespace: opencloud
spec:
  selector:
    app: collaboration
  ports:
  - name: http
    port: 80
    targetPort: http
